<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/card_temp_liked"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"
        >


        <ImageView
            android:id="@+id/img_temp_liked"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/category"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_temp_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/l_layout_item_liked"
            android:fontFamily="@font/noto_sans"
            android:paddingTop="5dp"
            android:text="@string/example"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/l_layout_item_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_temp_liked"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_temp_liked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingTop="10dp"
                android:text="@string/one_two_three"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginEnd="3dp"
                />
            <TextView
                android:id="@+id/price_val_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingTop="10dp"
                android:text="@string/RUB"
                android:textColor="#000"
                android:textSize="16sp"
                />



        </LinearLayout>



        <ImageView
            android:id="@+id/icon_temp_liked_delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/l_layout_item_liked"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_favorite_24"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/delete_from_liked" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>