<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/card_temp"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/img_temp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/category"
             />

        <TextView
            android:id="@+id/text_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/l_layout_item"
            android:fontFamily="@font/noto_sans"
            android:paddingTop="5dp"
            android:text="@string/example"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/l_layout_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_temp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/price_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingTop="10dp"
            android:text="@string/one_two_three"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginEnd="3dp"
             />


        <TextView
            android:id="@+id/price_val_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingTop="10dp"
            android:text="@string/RUB"
            android:textColor="#000"
            android:textSize="16sp"
            />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>