<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    tools:context=".View.Fragments.InfoFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/about_us_logo"
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:contentDescription="@string/snowboard_multiple"
                    android:focusable="true"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/about_us_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/description_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/about_us_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_us_description"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/info_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/about_us_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_us_info"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/address_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/about_us_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_us_address"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/phone_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/about_us_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_us_phone"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/email_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/about_us_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_us_email"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/me_about_us"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>