<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/card_temp_cart"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/img_temp_cart"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/category"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_temp_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/example"
            android:textAlignment="textEnd"
            android:textColor="#000"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_marginTop="7dp"
            android:id="@+id/l_layout_item_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_temp_cart"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/price_temp_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/one_two_three"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginEnd="3dp"
            />

        <TextView
            android:id="@+id/price_val_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/RUB"
            android:textColor="#000"
            android:textSize="20sp"
            />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:backgroundTint="@color/functional_item"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_cart"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:cornerRadius="4dp" />


                <TextView
                    android:id="@+id/items_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one_two_three"
                    android:gravity="center"
                    android:background="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/plus_cart"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:cornerRadius="0dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</androidx.cardview.widget.CardView>