<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragments.CartFragment"
    android:background="@color/main_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/card_view_cart"
        android:layout_marginBottom="157dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_cart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#e1ecf7"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="57dp"
        app:cardCornerRadius="5dp"
        >

        <TextView
            android:id="@+id/text_cart_price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/total_price"
            android:textColor="#000"
            android:layout_marginStart="10dp"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/l_layout_item"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:paddingTop="10dp"
                android:text="@string/_null_"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#000"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/price_val_item_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/RUB"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#000"
                android:textSize="25sp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/functional_item">

            <TextView
                android:id="@+id/button_go_to_exec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:paddingTop="12dp"
                android:text="@string/go_to_execution"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>